--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">耀联投资</string>
-    <!-- 注册页面 -->
+    <!-- 注册页面start -->
     <string name="register">注册新用户</string>
     <string name="register_phone">手机号</string>
     <string name="register_confirm">提交验证码</string>
@@ -8,5 +8,21 @@
     <string name="register_code_send">发送验证码</string>
     <string name="register_phone_send_hint">请输入手机号码</string>
     <string name="register_randCode_send_hint">请输入短信验证码</string>
+    <string name="register_pwd_first_hint">请输入新密码</string>
+    <string name="register_pwd_second_hint">再次输入密码</string>
+    <string name="register_pwd_submit">确认</string>
+    <string name="register_first_response">请输入新密码</string>
+    <string name="register_second_response">请输入第二次密码</string>
+    <string name="register_pwd_disagree">二次密码输入不一致</string>
+    <string name="register_xieyi">您还没有同意用户协议</string>
+    <string name="register_user_agreement">用户协议</string>
+    <!-- 注册页面end -->
+
+    <!-- 登陆页面start -->
+    <string name="login_title">登录</string>
+    <string name="login_register">注册</string>
+    <string name="login_pwd_hint">密码</string>
+    <string name="login_pwd_response">请输入登录密码</string>
+    <!-- 登陆页面end -->
 
 </resources>
