--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,9 @@
     <string name="apply_invest_num">请输入购买的份数</string>
     <string name="apply_loan_price">请输入您的贷款金额</string>
     <string name="apply_loan_stage_list">请选择分期</string>
+
+    <string name="company_all">全部</string>
+    <string name="company_news">行业新闻</string>
+    <string name="company_dongTai">公司动态</string>
+    <string name="company_maoYi">贸易公司</string>
 </resources>
