--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
 
     <string name="noData">没有更多啦</string>
     <string name="netOff">网络未连接</string>
+    <string name="info_detail">资讯详情</string>
 </resources>
