--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="gridView_name_2">理财产品</string>
     <string name="gridView_name_3">预约理财</string>
     <string name="gridView_name_4">预约贷款</string>
-    <string name="gridView_name_5">推荐有礼</string>
+    <string name="gridView_name_5">企业文化</string>
     <string name="gridView_name_6">公司简介</string>
     <!-- 首页标题页面end -->
     <!-- 个人中心页面start -->
@@ -71,10 +71,10 @@
     <string name="apply_loan_stage_list">请选择分期</string>
     <string name="apply_product_null">申请的产品为空,不能提交</string>
 
-    <string name="company_all">全部</string>
-    <string name="company_news">行业新闻</string>
-    <string name="company_dongTai">公司动态</string>
-    <string name="company_maoYi">贸易公司</string>
+    <string name="company_all">耀联投资</string>
+    <string name="company_news">联源贸易</string>
+    <string name="company_dongTai">科技公司</string>
+    <string name="company_maoYi">汽车销售</string>
 
     <string name="noData">没有更多啦</string>
     <string name="netOff">网络未连接</string>
